--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mermaid Slaughterhouse</title>
+  <title>Mermaid Slaughterhouse - Make Fish Leather Fine Art Again</title>
   <meta name="description" content="Mermaid Slaughterhouse — Make Fish Leather Fine Art Again. An art collective elevating traditional materials like fish leather into contemporary fine art with digital tools." />
 
   <!-- Fonts: Metal Mania (title, heavy‑metal vibe) + Inter (body) -->
