--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     /* Instagram grid */
     .ig-grid{ display:grid; grid-template-columns:repeat(3,1fr); gap:8px; max-width:980px; margin:0 auto; padding:0 24px }
-    .ig-card{ position:relative; aspect-ratio:1/1; overflow:hidden; border-radius:12px; background:#111; }
+    .ig-card{ position:relative; aspect-ratio:4/5; overflow:hidden; border-radius:12px; background:#111; }
     .ig-card img{ width:100%; height:100%; object-fit:cover; display:block; transition:transform .2s ease }
     .ig-card:hover img{ transform:scale(1.03) }
     .ig-cap{ position:absolute; inset:auto 0 0 0; background:linear-gradient(transparent, rgba(0,0,0,.7)); color:#fff; font-size:12px; padding:8px 10px; max-height:46%; overflow:hidden; opacity:0; transition:opacity .2s ease }
@@ -69,7 +69,7 @@
   <footer>
     <div class="footer-inner">
       <span>Contact:</span>
-      <a href="mailto:info@mermaidslaughterhouse.com">info@mermaidslaughterhouse.com</a>
+      <a href="mailto:mermail@mermaidslaughterhouse.com">mermail@mermaidslaughterhouse.com</a>
     </div>
   </footer>
 
