--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <header class="container">
     <h1>Mermaid Slaughterhouse</h1>
     <p class="tagline">Make Fish Leather Fine Art Again</p>
+    <p class="lead">Watch this space - more coming soon!</p>
     <p class="lead">
       Mermaid Slaughterhouse is an art collective breaking stereotypes around womanhood and traditional handwork. We work with natural materials like fish leather and willow, reimagined with digital tools (from vector design to laser-cutting) in contemporary contexts. We unapologetically lift craft materials into high culture while exploring the communal side of making. Ground-level feminism and ecology guide the work — the personal is political.
     </p>
